fixed scrollbars

--- a/frontend/src/components/GroupById/groupById.css
+++ b/frontend/src/components/GroupById/groupById.css
@@ -60,6 +60,7 @@ padding-bottom: 5%;
     background-color: #ecf0f3;
    
 }
+
 .groupoByidCard{
   width:20%; 
   height:30%; 
@@ -96,12 +97,12 @@ padding-bottom: 5%;
 }
 .changeToScroll{
     overflow-y:scroll;
-    overflow-x: hidden; /* Hide horizontal scrollbar */
+    /* overflow-x: hidden; Hide horizontal scrollbar */
     height:80%;
 }
 .changeToScroll::-webkit-scrollbar {
-    display:none;
-    scrollbar-width:0px;
+     width:0;
+ 
 }
 .fa-users{
     width:10%;
@@ -114,6 +115,9 @@ padding-bottom: 5%;
     width:100%;
     overflow-x: hidden; /* Hide horizontal scrollbar */
     height:60%;
+}
+.groupImageBoxInner::-webkit-scrollbar{
+    width:0;
 }
 
 hr{
